kubernetes/apps/security/vaultwarden/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
spec:
  selector:
    app: vaultwarden
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
