kubernetes/apps/security/vaultwarden/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden
  namespace: security
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - vaultwarden.${SECRET_DOMAIN}
  rules:
    - backendRefs:
        - name: vaultwarden
          port: 80
